--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,27 @@ letter-spacing: 0.02em;
 
 /* ----------------header -------------------------*/
 .container {
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
+    min-width: 396px;
+    max-width: 428px;
+    padding: 0 16px;
     margin: 0 auto;
-    /* outline: 1px solid #404bbf; */
+    outline: 1px solid #404bbf;
 }
+
+@media only screen and (min-width:768px){
+    .container{
+        width:768px ;
+    }
+}
+
+@media only screen and (min-width:1158px) {
+    .container{
+        width: 1158px;
+        padding: 0 15px;
+    }
+}
+
+
 .container-header {
     display: flex;
    align-items: center;
@@ -188,7 +203,6 @@ color: var(--seventh-color);
     width: 100%;
     border-radius: 2px;
     display: block;
-    /* color: #404bbf; */
     background-color: #404BBF;
 
 }
@@ -325,18 +339,39 @@ padding-bottom: 120px;
 
 .strategy-list-content {
     display: flex;
-    gap:24px;
+    flex-wrap: wrap;
+    gap:72px 24px;
 }
 .strategy-item {
-width: 264px;
+width: 396px;
 }
+
+@media only screen and (min-width:768px){
+    .strategy-item{
+        width: 356px;
+    }
+}
+@media only screen and (min-width: 1200px){
+    .strategy-item{
+        width: 264px;
+    }
+}
+
 .strategy-title {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
+    font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+margin-bottom: 8px;
 letter-spacing: 0.02em;
 color: var(--second-title-color);
-margin-bottom: 8px;
+}
+
+@media only screen and (min-width:1200px){
+.strategy-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+}
 }
 .strategy-text {
 font-weight: 400;
@@ -344,6 +379,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+
 }
 
 
