--- a/css/styles.css
+++ b/css/styles.css
@@ -606,6 +606,9 @@ padding-bottom: 120px;
     .strategy-item{
         flex-basis:calc((100% - 96px) / 4);
     }
+    .strategy-list-content{
+        flex-wrap: nowrap;
+    }
 }
 
 .strategy-title {
@@ -806,18 +809,7 @@ margin-bottom: 8px; ;
         margin-right: auto
 }
 
-@media screen and (min-width:1158px) {
-    .customers{  
-        padding-top: 120px ;
-        padding-bottom: 120px;
-        } 
-    .customers-list {
-        display: flex;
-        justify-content: center;
-        gap: 24px;
-    }
 
-}
 
 @media screen and (max-width:767px) {
     .customers-list{
@@ -846,6 +838,20 @@ margin-bottom: 8px; ;
       column-gap: 16px;
     }
  }
+
+ @media screen and (min-width:1158px) {
+    .customers{  
+        padding-top: 120px ;
+        padding-bottom: 120px;
+        } 
+    .customers-list {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+        flex-wrap: nowrap;
+    }
+
+}
  
  .customers-item {
  /* width:calc((100% - 120px) / 6); */
@@ -889,17 +895,86 @@ margin-bottom: 8px; ;
 
 /*  -----------Footer ----------- */
 
-.container-footer{
+/* .container-footer{
     display: flex;
     align-items: baseline;
 
-}
+} */
 
 .footer {
     background-color: var(--second-title-color);
-    padding-top: 100px;
-    padding-bottom: 100px;
-    
+    padding-top: 96px;
+    padding-bottom: 96px;
+
+}
+
+@media screen and (min-width:1158px) {
+    .footer{
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    .container-footer{
+        display: flex;
+        align-items: baseline;
+        flex-wrap: nowrap;
+    }
+    .footer-logo{
+        margin-right: 120px;
+    }
+    .footer-form{
+        margin-left: 80px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .footer-email{
+        margin-bottom: 16px;
+    }
+    .footer-logo{
+        text-align: center;
+    }
+    .footer-text{
+        width: 264px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 72px;
+    }
+    .footer-socialmedia{
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 72px;
+    }
+    .socialmedia-title{
+        text-align: center;
+    }
+    .footer-btn{
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+}
+
+@media screen  and (min-width:768px) and (max-width:1157px){
+    .container-footer{
+        display: flex;
+        align-items: baseline;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+        max-width: 584px;
+    }
+}
+@media screen and (min-width:768px) {
+    .footer-logo{
+        width: 264px;
+    }
+    .footer-form-wrap{
+        display: flex;
+        align-items: baseline;
+        gap: 24px;
+    }
+    .footer-email{
+        min-width: 264px;
+    }
 }
 
 .footer-logo {
@@ -930,10 +1005,6 @@ margin-bottom: 8px; ;
     fill:var(--forth-title-color);
 }
 
-
-.footer-socialmedia {
-    
-}
 
 .socialmedia-title {
     font-weight: 500;
@@ -1084,8 +1155,12 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
-    
+}
 
+@media screen and (min-width:428px) and (max-width:767px) {
+    .modal{
+        width:392px;
+    }
 }
 
 .backdrop.is-hidden .modal {
@@ -1093,8 +1168,6 @@ opacity: 0;
 transform: translate(-50%, -70%);
 transition-delay: 300ms ;
 }
-
-
 
 
 .modal-btn {
@@ -1271,11 +1344,7 @@ opacity:0;
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-  
-.agreement-icon {
 
-
-}
 .modal-agreement-text {
 font-size: 12px;
 line-height: 1.17;
