--- a/css/styles.css
+++ b/css/styles.css
@@ -70,8 +70,6 @@ letter-spacing: 0.02em;
 
 .container {
     width: 100%;
-    /* min-width: 396px;
-    max-width: 428px; */
     padding: 0 16px;
     /* outline: 1px solid #404bbf; */
 }
@@ -99,12 +97,10 @@ letter-spacing: 0.02em;
 
 
 .container-header {
-    display: flex;
+   display: flex;
    align-items: center;
-   justify-content: space-between;
-
-   
 }
+
 .header {
 color:#FFFFFF ;
 border: 1px solid #E7E9FC;
@@ -119,7 +115,16 @@ transition: background-color var(--anim-s), backdrop-filter var(--anim-s);
     backdrop-filter: blur(7px);
 }
 
-
+@media screen and (max-width:767px) {
+    .container-header{
+        padding-top: 24px;
+        padding-bottom: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+}
 
 .navigation-list{
     display: flex;
@@ -127,8 +132,6 @@ transition: background-color var(--anim-s), backdrop-filter var(--anim-s);
     margin-right: auto;
     
 }
-
-
 
 .main-logo {
 font-family: 'Raleway', sans-serif;
@@ -247,6 +250,7 @@ color: var(--seventh-color);
         left:0;
         width: 100%;
         height: 100%;
+        z-index: 1000;
         background-color: var(--main-title-color);
         opacity: 0;
         visibility: hidden;
@@ -257,10 +261,15 @@ color: var(--seventh-color);
 
     .menu-container{
         position: relative;
+        width: 100%;
+        height: 100vh;
         padding: 55px 11px 16px 16px;
         display: flex;
         flex-direction: column;
-        height: 100%;
+        justify-content: space-between;
+        overflow-y: scroll;
+        margin: 0 auto;
+        
     }
 
    .mobile-close-btn{
@@ -363,25 +372,42 @@ color: var(--seventh-color);
   }
 }
 
-@media only screen and (min-width:768px) {
+@media only screen and (min-width:768px)  {
     .mobile-menu{
         display: none;
     }
+    .modal-open-btn{
+        display: none;
+    }
+    .info{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 12px;
+    }
+    .main-logo{
+        margin-right: 120px;
+    }
 }
 
-.adress {
-font-style:normal;
-align-content: center;
-}
-.info{
+
+@media only screen and (min-width: 1158px) {
+    .container-header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+.info {
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     align-content: center;
     gap: 40px;
 }
-.mail {
-
-
+}
+.adress {
+font-style:normal;
+align-content: center;
 }
 
 .mail-link {
@@ -399,8 +425,6 @@ align-content: center;
 .mail-link:is(:hover, :focus) {
     color: #404bbf;
 }
-
-
 
 .tel-link {
     line-height: 1.5;
@@ -428,10 +452,8 @@ background-size: cover;
 background-color: var(--second-title-color);
 padding-top: 112px;
 padding-bottom: 112px;
-margin-right: auto;
-margin-left: auto;
-/* margin-top: 70px; */
-max-width: 1440px;
+margin: 0 auto;
+max-width: 428px;
 
 }
 
@@ -455,22 +477,39 @@ background-repeat: no-repeat;
 background-position: center ;
 background-size: cover; */
 
-@media screen and (max-width:767px) {
-  
-    .descrition-title {
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 1.11;
-      text-align: center;
-      letter-spacing: 0.02em;
-      color: var(--main-title-color);
-      max-width: 320px;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 72px;
+.descrition-title {      
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--main-title-color);
+    max-width: 320px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+
+}
+
+@media screen and (min-width:768px) {
+    .descrition-title{
+        font-size: 56px;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 36px;
     }
-  }
+}
+
+@media screen and (min-width:428px){
+    .descrition{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)) url(../images/mobal-photo/Dark-bg.jpg);
+    height: 436px;
+    max-width: 768px;
+    margin: 0 auto;
+    }
+    
+}
 
   @media screen and (min-device-pixel-ratio) and (max-width:767px),
          screen and (min-resolution: 192dpi) and (max-width:767px),
@@ -483,21 +522,14 @@ background-size: cover; */
   @media screen and (min-width:768px) {
     .descrition{
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-photo/bg-tab.jpg);
+        height: 600px;
+        max-width: 1440px;
+        margin: 0 auto;
+        padding-top: 188px;
+        padding-bottom: 188px;
     }
   }
 
-.descrition-title {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: var(--main-title-color);
-    max-width: 496px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 36px;
-
-}
 
 @media screen and (min-device-pixel-ratio) and (min-width:768px),
        screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -559,9 +591,9 @@ background-size: cover; */
     }
 }
 
-@media only screen and (min-width:1200px){
+@media only screen and (min-width:1158px){
 .strategy-list{
-    padding-top: 120px ;
+padding-top: 120px ;
 padding-bottom: 120px;
 }
 }
@@ -577,7 +609,7 @@ padding-bottom: 120px;
     margin-bottom: 8px;
 }
 
-@media only screen and (max-width:1200px){
+@media only screen and (max-width:1158px){
     .icons-container{
         display: none;
     }
@@ -602,7 +634,7 @@ padding-bottom: 120px;
     }
 }
 
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width: 1158px){
     .strategy-item{
         flex-basis:calc((100% - 96px) / 4);
     }
@@ -955,12 +987,15 @@ margin-bottom: 8px; ;
 
 @media screen  and (min-width:768px) and (max-width:1157px){
     .container-footer{
-        display: flex;
+        /* display: flex; */
+        margin-left: auto;
+        flex-direction: row;
+        justify-content: flex-start;
         align-items: baseline;
         flex-wrap: wrap;
-        row-gap: 72px;
+        /* row-gap: 72px; */
         column-gap: 24px;
-        max-width: 584px;
+        max-width: 537px;
     }
 }
 @media screen and (min-width:768px) {
@@ -1291,7 +1326,6 @@ color: var(--fifth-color);
     justify-content: start;
     align-items: center;
     gap:8px;
-
     margin-bottom: 24px;
 
 
