--- a/css/styles.css
+++ b/css/styles.css
@@ -721,15 +721,27 @@ color: #434455;
 .team{
     padding-top: 96px;
     padding-bottom: 96px;
-    background-color: #F4F4FD; 
+    background-color: var(--forth-title-color); 
 }
-
+@media screen and (min-width:768px) {
+    .team-members{
+display:flex;
+flex-wrap: wrap;
+justify-content: center;
+column-gap: 24px;
+row-gap: 64px;
+ 
+}
+}
 @media screen and (min-width:1158px) {
     .team{
         padding-top: 120px ;
         padding-bottom: 120px;
     }
-    
+    .team-members{
+        column-gap: 24px;
+        row-gap: 24px;
+    }
 }
 
 .team-title {
@@ -743,14 +755,6 @@ color: #434455;
 }
 
 @media screen and (min-width:768px) {
-    .team-members {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        justify-content: center;
-        row-gap: 64px;
-        column-gap: 24px;
-    }
     .team-members-item{
         margin: 0;
         flex-basis: calc((100% - 1 * 24px) / 2);
@@ -775,9 +779,18 @@ color: #434455;
 }
 .team-members-item {
     background-color: #FFFFFF;
-    /* width: calc((100% - 48px) / 4); */
+    max-width: 264px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+@media screen and (max-width: 767px) {
+    .team-members-item{
+        margin: 0 auto;
+    }
+    .team-members-item:not(:last-child){
+        margin-bottom: 72px;
+    }
 }
 .team-members-item-title {
 font-weight: 500;
@@ -854,6 +867,7 @@ margin-bottom: 8px; ;
     }
     .customers-item{
         flex-basis: calc((100% - 16px) / 2);
+   
     }
 }
 @media screen and (min-width:768px){
@@ -892,6 +906,7 @@ margin-bottom: 8px; ;
  
  }
 .customers-title {
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.1;
     text-align: center;
@@ -901,8 +916,6 @@ margin-bottom: 8px; ;
     margin-bottom: 72px;
 
 }
-
-
 
 .customers-link {
     width: 100%;
@@ -927,95 +940,77 @@ margin-bottom: 8px; ;
 
 /*  -----------Footer ----------- */
 
-/* .container-footer{
-    display: flex;
-    align-items: baseline;
 
-} */
+
+@media screen and (min-width:768px) and (max-width:1157px) {
+    .container-footer{
+        width: 584px;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .container-footer{
+        flex-direction: column;
+        align-items: center;
+        gap: 74px;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    .container-footer{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width:1158px){
+    .container-footer{
+        display: flex;
+        align-items: baseline;
+        flex-wrap: nowrap;
+
+    }
+    
+}
 
 .footer {
-    background-color: var(--second-title-color);
-    padding-top: 96px;
-    padding-bottom: 96px;
+background-color: var(--second-title-color);
+padding-top: 96px;
+padding-bottom: 96px;
+}
 
+
+
+
+@media screen and (max-width:767px) {
+    .footer-logo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .socialmedia-title{
+        text-align: center;
+    }
+    
 }
 
 @media screen and (min-width:1158px) {
     .footer{
         padding-top: 100px;
-        padding-bottom: 100px;
+        padding-bottom: 100px; 
     }
-    .container-footer{
-        display: flex;
-        align-items: baseline;
-        flex-wrap: nowrap;
-    }
-    .footer-logo{
+    .footer-logo {
         margin-right: 120px;
     }
-    .footer-form{
-        margin-left: 80px;
-    }
-}
-
-@media screen and (max-width:767px){
-    .footer-email{
-        margin-bottom: 16px;
-    }
-    .footer-logo{
-        text-align: center;
-    }
-    .footer-text{
-        width: 264px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 72px;
-    }
-    .footer-socialmedia{
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 72px;
-    }
-    .socialmedia-title{
-        text-align: center;
-    }
-    .footer-btn{
-        margin-top: auto;
-        margin-bottom: auto;
-    }
-}
-
-@media screen  and (min-width:768px) and (max-width:1157px){
-    .container-footer{
-        /* display: flex; */
-        margin-left: auto;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: baseline;
-        flex-wrap: wrap;
-        /* row-gap: 72px; */
-        column-gap: 24px;
-        max-width: 537px;
-    }
-}
-@media screen and (min-width:768px) {
-    .footer-logo{
-        width: 264px;
-    }
     .footer-form-wrap{
-        display: flex;
-        align-items: baseline;
-        gap: 24px;
-    }
-    .footer-email{
-        min-width: 264px;
+        margin-left: 80px;
+
     }
 }
-
-.footer-logo {
-    margin-right: 120px;
-}
-
 .footer-text {
     font-style: normal;
     font-weight: 400;
@@ -1041,6 +1036,10 @@ margin-bottom: 8px; ;
 }
 
 
+.footer-socialmedia {
+    
+}
+
 .socialmedia-title {
     font-weight: 500;
     font-size: 16px;
@@ -1064,6 +1063,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #31d0aa; 
 
 }
+
+
+
 
 /* ----------------------Wrap------------------ */
 
@@ -1113,6 +1115,18 @@ color: var(--main-title-color);
     color: var(--main-title-color);
     outline: none;
 }
+@media screen and (min-width:768px){
+    .footer-email{
+        width: 264px;
+    }
+    .footer-form{
+        display: flex;
+    }
+    .footer-btn{
+        margin: 0;
+    }
+}
+
 
 .footer-email::placeholder {
 font-weight: 400;
