--- a/css/styles.css
+++ b/css/styles.css
@@ -959,7 +959,6 @@ margin-bottom: 8px; ;
 @media only screen and (min-width:768px) {
     .container-footer{
         display: flex;
-        justify-content: space-between;
         flex-wrap: wrap;
         row-gap: 72px;
         column-gap: 24px;
@@ -972,7 +971,7 @@ margin-bottom: 8px; ;
         display: flex;
         align-items: baseline;
         flex-wrap: nowrap;
-
+        gap: 0;
     }
     
 }
@@ -991,10 +990,22 @@ padding-bottom: 96px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 72px;
     }
     .socialmedia-title{
         text-align: center;
     }
+    .footer-socialmedia{
+        margin-bottom: 72px;
+    }
+
+.socialmedia-list{
+    justify-content: center;
+}
+
+.form-text{
+    text-align: center;
+}
     
 }
 
@@ -1005,10 +1016,6 @@ padding-bottom: 96px;
     }
     .footer-logo {
         margin-right: 120px;
-    }
-    .footer-form-wrap{
-        margin-left: 80px;
-
     }
 }
 .footer-text {
@@ -1036,9 +1043,6 @@ padding-bottom: 96px;
 }
 
 
-.footer-socialmedia {
-    
-}
 
 .socialmedia-title {
     font-weight: 500;
@@ -1070,9 +1074,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* ----------------------Wrap------------------ */
 
 .footer-form-wrap{
-    display:inline-block;
     align-items: center;
-    margin-left: 80px;
 }
 
 .form-text{
@@ -1086,25 +1088,37 @@ color: var(--main-title-color);
 
 }
 
-.footer-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:24px;
+.footer-form{
 
 }
+
+@media screen and (min-width:1158px) {
+    .footer-form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap:24px;
+    }
+}
 .form-label {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     box-sizing: border-box;
     border: 1px solid var(--main-title-color);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+    margin-bottom: 24px;
+}
+
+@media screen and (min-width:768px) {
+    .form-label{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 0;
+    }
 }
 
 .footer-email {
-    width: 264px;
     height: 40px;
     padding: 0;
     padding-left: 16px;
@@ -1119,6 +1133,9 @@ color: var(--main-title-color);
     .footer-email{
         width: 264px;
     }
+    .footer-form-wrap{
+        margin-left: 0;
+    }
     .footer-form{
         display: flex;
     }
@@ -1127,6 +1144,13 @@ color: var(--main-title-color);
     }
 }
 
+@media screen and (min-width:1158px) {
+    .footer-form-wrap{
+        display:inline-block;
+        margin-left: 80px;
+    }
+    
+}
 
 .footer-email::placeholder {
 font-weight: 400;
@@ -1162,7 +1186,15 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: var(--seventh-color);
 }
 
-
+@media screen and (max-width:767px) {
+    .footer-btn{
+        display: flex;
+        margin: 0 auto;
+    }
+    .footer-email{
+        width: 100%;
+    }
+}
 .plane {
    fill: var(--main-title-color);
 }
